Adicionada a questao da permissao

--- a/TutorialAppleFoodTracker/Base.lproj/Main.storyboard
+++ b/TutorialAppleFoodTracker/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5sc-rm-Gvg">
-                                <rect key="frame" x="8" y="28" width="359" height="424.5"/>
+                                <rect key="frame" x="8" y="28" width="359" height="455.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5H-Iw-PuH">
                                         <rect key="frame" x="0.0" y="0.0" width="86.5" height="20.5"/>
@@ -41,7 +41,7 @@
                                         </connections>
                                     </button>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="bkh-De-Qdp">
-                                        <rect key="frame" x="0.0" y="104.5" width="320" height="320"/>
+                                        <rect key="frame" x="0.0" y="104.5" width="351" height="351"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="bkh-De-Qdp" secondAttribute="height" multiplier="1:1" id="YQV-BZ-m2a"/>
@@ -49,6 +49,7 @@
                                     </imageView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="bkh-De-Qdp" secondAttribute="trailing" constant="8" id="9dh-sf-rhu"/>
                                     <constraint firstAttribute="trailing" secondItem="zKB-gT-um3" secondAttribute="trailing" id="g8R-3D-PPX"/>
                                 </constraints>
                             </stackView>
