--- a/TutorialAppleFoodTracker/Base.lproj/Main.storyboard
+++ b/TutorialAppleFoodTracker/Base.lproj/Main.storyboard
@@ -19,36 +19,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5sc-rm-Gvg">
-                                <rect key="frame" x="8" y="28" width="304" height="415"/>
+                                <rect key="frame" x="8" y="28" width="320" height="450"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5H-Iw-PuH">
-                                        <rect key="frame" x="0.0" y="0.0" width="86.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5H-Iw-PuH">
+                                        <rect key="frame" x="0.0" y="0.0" width="312" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zKB-gT-um3">
-                                        <rect key="frame" x="0.0" y="28.5" width="304" height="30"/>
+                                        <rect key="frame" x="0.0" y="28.5" width="312" height="43.5"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zI-pD-Tb2">
-                                        <rect key="frame" x="0.0" y="66.5" width="151" height="30"/>
-                                        <state key="normal" title="Set Default Text Label"/>
-                                        <connections>
-                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="N2B-GU-ofM"/>
-                                        </connections>
-                                    </button>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="bkh-De-Qdp">
-                                        <rect key="frame" x="0.0" y="104.5" width="296" height="296"/>
+                                        <rect key="frame" x="0.0" y="80" width="312" height="312"/>
                                         <gestureRecognizers/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="bkh-De-Qdp" secondAttribute="height" multiplier="1:1" id="YQV-BZ-m2a"/>
+                                            <constraint firstAttribute="width" secondItem="bkh-De-Qdp" secondAttribute="height" multiplier="1:1" id="NQV-cY-54A"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uVE-1K-23q" userLabel="RatingControl" customClass="RatingControl" customModule="TutorialAppleFoodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="408.5" width="296" height="6.5"/>
+                                        <rect key="frame" x="0.0" y="400" width="320" height="50"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="starCount">
                                                 <integer key="value" value="5"/>
@@ -60,20 +53,23 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="bkh-De-Qdp" secondAttribute="trailing" constant="8" id="9dh-sf-rhu"/>
-                                    <constraint firstAttribute="trailing" secondItem="zKB-gT-um3" secondAttribute="trailing" id="g8R-3D-PPX"/>
-                                    <constraint firstItem="uVE-1K-23q" firstAttribute="trailing" secondItem="bkh-De-Qdp" secondAttribute="trailing" id="qBb-ru-Bq3"/>
+                                    <constraint firstItem="bkh-De-Qdp" firstAttribute="top" secondItem="zKB-gT-um3" secondAttribute="bottom" constant="8" id="6hA-wI-pYl"/>
+                                    <constraint firstItem="zKB-gT-um3" firstAttribute="top" secondItem="U5H-Iw-PuH" secondAttribute="bottom" constant="8" id="MNj-hg-RjH"/>
+                                    <constraint firstAttribute="trailing" secondItem="bkh-De-Qdp" secondAttribute="trailing" constant="8" id="dqw-nF-NAK"/>
+                                    <constraint firstAttribute="trailing" secondItem="zKB-gT-um3" secondAttribute="trailing" constant="8" id="jnP-ic-spW"/>
+                                    <constraint firstItem="uVE-1K-23q" firstAttribute="leading" secondItem="5sc-rm-Gvg" secondAttribute="leading" id="k0M-7Z-BHO"/>
+                                    <constraint firstAttribute="trailing" secondItem="U5H-Iw-PuH" secondAttribute="trailing" constant="8" id="l96-OO-30Q"/>
+                                    <constraint firstItem="zKB-gT-um3" firstAttribute="top" secondItem="U5H-Iw-PuH" secondAttribute="bottom" constant="8" id="osF-nQ-3p4"/>
+                                    <constraint firstAttribute="trailing" secondItem="uVE-1K-23q" secondAttribute="trailing" id="p5W-sC-qti"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5sc-rm-Gvg" secondAttribute="trailing" constant="8" id="71u-aN-Ej6"/>
-                            <constraint firstItem="5sc-rm-Gvg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="CR8-aD-zDI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5sc-rm-Gvg" secondAttribute="bottom" constant="125" id="KWb-im-V41"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5sc-rm-Gvg" secondAttribute="trailing" constant="8" id="P8b-6w-g3O"/>
-                            <constraint firstItem="5sc-rm-Gvg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="WBa-dp-dmh"/>
-                            <constraint firstItem="5sc-rm-Gvg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="bSK-fM-EYl"/>
+                            <constraint firstAttribute="trailing" secondItem="5sc-rm-Gvg" secondAttribute="trailing" constant="-8" id="JYp-or-VYJ"/>
+                            <constraint firstItem="5sc-rm-Gvg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="ahP-28-819"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5sc-rm-Gvg" secondAttribute="bottom" constant="90" id="fJM-6k-GwT"/>
+                            <constraint firstItem="5sc-rm-Gvg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="ppl-fj-ujb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
