--- a/TutorialAppleFoodTracker/Base.lproj/Main.storyboard
+++ b/TutorialAppleFoodTracker/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mqA-Qw-TGt">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -10,22 +10,44 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Meal Table View Controller-->
         <scene sceneID="vbS-De-Hg8">
             <objects>
-                <tableViewController id="mqA-Qw-TGt" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vjx-vV-Q1r">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <tableViewController id="mqA-Qw-TGt" customClass="MealTableViewController" customModule="TutorialAppleFoodTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vjx-vV-Q1r">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="UgJ-d5-Ogj">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" rowHeight="90" id="UgJ-d5-Ogj" customClass="MealTableViewCell" customModule="TutorialAppleFoodTracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UgJ-d5-Ogj" id="Ly1-dt-hSF">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="89.666666666666671"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="zCW-45-EKM">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EKa-Hx-XTP">
+                                            <rect key="frame" x="98" y="11" width="213" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mul-Nf-oQN" customClass="RatingControl" customModule="TutorialAppleFoodTracker" customModuleProvider="target">
+                                            <rect key="frame" x="98" y="40" width="270" height="50"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </stackView>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="EKa-Hx-XTP" id="cO7-mn-RAa"/>
+                                    <outlet property="photoImageView" destination="zCW-45-EKM" id="a2F-Kb-yDm"/>
+                                    <outlet property="ratingControl" destination="Mul-Nf-oQN" id="H58-gS-nTt"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -36,40 +58,43 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z36-D6-8Q2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-535" y="83"/>
+            <point key="canvasLocation" x="-537.68115942028987" y="82.33695652173914"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TutorialAppleFoodTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5sc-rm-Gvg">
-                                <rect key="frame" x="8" y="28" width="320" height="450"/>
+                                <rect key="frame" x="8" y="28" width="414" height="618"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5H-Iw-PuH">
-                                        <rect key="frame" x="0.0" y="0.0" width="312" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="406" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zKB-gT-um3">
-                                        <rect key="frame" x="0.0" y="28.5" width="312" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28.333333333333336" width="406" height="40.000000000000007"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="1n8-SL-SsC"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="312" placeholderIntrinsicHeight="312" image="defaultPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="bkh-De-Qdp">
-                                        <rect key="frame" x="0.0" y="80" width="312" height="312"/>
+                                        <rect key="frame" x="0.0" y="76.333333333333314" width="406" height="406"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="bkh-De-Qdp" secondAttribute="height" multiplier="1:1" id="NQV-cY-54A"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uVE-1K-23q" userLabel="RatingControl" customClass="RatingControl" customModule="TutorialAppleFoodTracker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="400" width="320" height="50"/>
+                                        <rect key="frame" x="0.0" y="490.33333333333343" width="414" height="127.66666666666669"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="starCount">
                                                 <integer key="value" value="5"/>
@@ -81,8 +106,8 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="bkh-De-Qdp" firstAttribute="top" secondItem="zKB-gT-um3" secondAttribute="bottom" constant="8" id="6hA-wI-pYl"/>
                                     <constraint firstItem="zKB-gT-um3" firstAttribute="top" secondItem="U5H-Iw-PuH" secondAttribute="bottom" constant="8" id="MNj-hg-RjH"/>
+                                    <constraint firstItem="bkh-De-Qdp" firstAttribute="top" secondItem="zKB-gT-um3" secondAttribute="bottom" constant="8" id="Rvi-1Z-odU"/>
                                     <constraint firstAttribute="trailing" secondItem="bkh-De-Qdp" secondAttribute="trailing" constant="8" id="dqw-nF-NAK"/>
                                     <constraint firstAttribute="trailing" secondItem="zKB-gT-um3" secondAttribute="trailing" constant="8" id="jnP-ic-spW"/>
                                     <constraint firstItem="uVE-1K-23q" firstAttribute="leading" secondItem="5sc-rm-Gvg" secondAttribute="leading" id="k0M-7Z-BHO"/>
@@ -114,6 +139,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="defaultPhoto" width="112" height="112"/>
+        <image name="defaultPhoto" width="75" height="75"/>
     </resources>
 </document>
